--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <argLine>-Duser.language=en -Duser.region=GB</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -44,6 +45,16 @@
             <artifactId>rest-assured</artifactId>
             <version>5.2.0</version>
         </dependency>
+
+
+
+
+
+
+
+
+
+
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
