--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,3 @@
 hr_ip_adress=http://54.82.123.95:1000/ords/hr
 spartan_ip_address=http://54.82.123.95:8000
+cydeo_training_api=https://api.training.cydeo.com
