--- a/pom.xml
+++ b/pom.xml
@@ -46,22 +46,19 @@
             <version>5.2.0</version>
         </dependency>
 
-
-
-
-
-
-
-
-
-
-
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <!-- in order to convert JsonPath object to map-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.12.4</version>
         </dependency>
+
+
+
+
+
+
 
         <dependency>
             <groupId>com.oracle.ojdbc</groupId>
