--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
             <version>21.7.0.0</version>
         </dependency>
 
-        <!-- it creates getter setters automatically -->
+        <!-- it creates getter & setters automatically -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
