--- a/pom.xml
+++ b/pom.xml
@@ -87,19 +87,20 @@
             <version>1.0.2</version>
         </dependency>
 
-
-
-
-
-
-
-
         <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+        <!-- for json schema validation -->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>json-schema-validator</artifactId>
             <version>4.4.0</version>
         </dependency>
+
+
+
+
+
+
+
 
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
