--- a/configuration.properties
+++ b/configuration.properties
@@ -2,4 +2,10 @@ hr_ip_adress=http://54.82.123.95:1000/ords/hr
 spartan_ip_address=http://54.82.123.95:8000
 spartan_auth_ip_address=http://54.82.123.95:7000
 cydeo_training_api=https://api.training.cydeo.com
+book_it_api_qa1=https://cybertek-reservation-api-qa.herokuapp.com
 
+book_it_api_qa3=https://cybertek-reservation-api-qa3.herokuapp.com
+teacher_email=teachervawiltonamiss@gmail.com
+teacher_password=wiltonamiss
+team_leader_email=daldie7l@seattletimes.com
+team_leader_password=ruthannjohnes
